--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,20 +1,50 @@
-name: CI
-on: [push]
+#GitHub Actions workflow
+name: Java CI with Gradle
+
+on:
+  push:
+    branches:
+      - develop
+  pull_request:
+    branches:
+      - develop
+
 jobs:
-  builds:
+  build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+#
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: 'adopt'
+          java-version: '17'
+          distribution: 'temurin'
 
-      - name: Make Gradlew executable
-        run: chmod +x ./gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3.1.0
 
-      - name: Build with Gradle
+      - name: Build with Gradle Wrapper
         run: ./gradlew build
 
+  dependency-submission:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Generate and Submit Dependency Graph
+        uses: gradle/actions/dependency-submission@v3.1.0
